<resources>
    <string name="app_name">EbookAppProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_App">App</string>
    <string name="nav_In4">Information</string>
    <string name="nav_MyBook">My Bookshelf</string>
    <string name="nav_Note">My Note</string>
    <string name="nav_Information">Book</string>
    <string name="nav_ProfileProducer">Trần Viết Quang_19021507</string>
    <string name="nav_ProfileProducer2">Trần Minh Đức _19021437 </string>
    <string name="nav_Download">Download</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="Phan2">Có người thư sinh nọ quen thói ba hoa khoác lác, từng nói với bạn mình rằng:
\n<br></br><br>
"<i>Từ cổ chí kim, thánh nhân chính là những người khó tìm nhất. Năm xưa kể từ lúc Bàn Cổ vương khai thiên lập địa, vạn vật sống trên đời không ai có thể so với ngài. Cho nên ngài được tính là người thứ nhất\n</i>". \n </br>
\n<br></br><br>
    Nói xong câu này, thư sinh giơ lên 1 ngón tay để xác nhận. \n</br>
<br>
    "<i>Sau đó là tới Khổng Tử, người am hiểu thi thư lễ nhạc, được mệnh danh là thầy của vạn nhà, không ai dám bất kính. Ngài được tính là người thứ hai.\n</i>" – thư sinh lại giơ thêm một ngón tay, tỏ ý đang đếm.\n</br>
\n<br></br>\n<br></br>
Thư sinh nói tiếp:
\n<br></br>
        <br>"<i>Từ sau hai người này, không còn có ai đủ khiến tôi cảm thấy nể phục…</i>".\n </br>
\n<br></br>\n<br></br>
Thế nhưng chỉ sau vài giây chần chừ, người này lại hớn hở quay sang khẳng định với bạn mình:
\n<br></br>\n<br></br>
        "<i>Anh thấy tôi nói có đúng không? Bậc thánh nhân trên đời quả nhiên rất ít, tính cả tôi mới có đúng 3 người</i>".</string>
    <string name="Phan1"> Gia đình phú ông có một người con trai, tuy đã lớn nhưng đầu óc chậm chạp, lại thường xuyên tiêu tiền hoang phí. Vì muốn con mình nên người, phú ông liền nói:
\n\n<br></br><br>
            "<i>Con có lớn mà không có khôn, thậm chí còn chẳng phân biệt được hạt kê và hạt lúa. Ta muốn để con ra ngoài học hỏi thì mới mong có ngày khá được</i>".\n</br>
\n<br></br><br>
            Người con trai nghe vậy cũng đồng ý. Sau khi rời nhà, anh gặp một người thợ đang tạc hai con sư tử đá.\n</br>
\n<br></br>
Nhìn dáng vẻ của hai bức tượng, cậu con trai thích chí vô cùng, ngỏ ý muốn mua. Người thợ kia cũng biết cậu ngốc nghếch, bèn cố tình hét giá:
\n<br></br><br>
            "<i>Con sư tử nhỏ giá 3000 lạng vàng, con sư tử lớn thì 5000 lạng</i>"./n</br>
\n<br></br><br>
            Cậu con trai thản nhiên gật đầu, yêu cầu người đó đem tượng đến nhà mình, người kia liền mang theo bức tượng sư tử nhỏ về trước. Khi về tới nhà, cậu vội vàng khoe với cha rằng mình mua được đồ tốt.\n</br>
\n<br></br>
Tới khi nhìn thấy tượng con sư tử đá bình thường mà bị hét giá lên tới mấy ngàn lượng vàng, người cha không khỏi than trời mà nói:
\n<br></br><br>
            "<i>Con bỏ ra số tiền lớn như vậy để mua thứ đồ vô dụng này, thật đúng là đứa con phá gia chi tử. Chẳng trách vì sao mọi người thường bảo ta thế nào cũng gặp báo ứng</i>"./n</br>
\n<br></br><br>
            Cậu con trai nghe xong lập tức vỗ tay cười lớn:\n</br>
\n<br></br><br>
            "<i>Con nói cha nghe, đây mới chỉ là báo ứng nhỏ thôi, còn một báo ứng lớn đang chờ phía sau kia kìa</i>".\n</br></string>
    <string name="Phan3">Một người đi chợ, mua được con lợn. Dọc đường về, trời nắng, đang định vào quán bên đường uống nước thì gặp một chú lính lệ. Chú lính lệ hỏi:
\n<br></br><br>
            – Anh kia, con lợn giá bao nhiêu?</br>
\n<br></br><br>
            Anh ta thấy thầy quyền cũng chú ý đến mình và con lợn, liền lễ phép trả lời:</br>
\n<br></br><br>
            – Dạ, hơn quan đấy ạ.</br>
\n<br></br><br>
            Tên lính liền cho anh ta một bạt tai, rồi mắng:</br>
\n<br></br><br>
            – Mày láo! Dám nói lợn hơn quan à?</br>
\n<br></br><br>
            – Dạ, tôi lỡ lời!</br>
\n<br></br><br>
            Anh van lạy mãi, chú lính mới tha cho. Đi một đoạn lại gặp chú khách. Chú khách lại hỏi giá con lợn. Đang ấm ức trong lòng, anh ta liền bảo:</br>
\n<br></br><br>
            – Mới bị một vố trắng răng ra rồi, tôi không nói.</br>
\n<br></br><br>
            Cho là anh ta hỗn xược, chú khách đánh cho một gậy bảo:</br>
\n<br></br><br>
            – Mày lại chế nhạo ta trắng răng à?</br>
\n<br></br><br>
            Anh ta bỏ chạy thục mạng, nghĩ rằng chơi với những chú khách thế này, chỉ có thiệt thân. Về gần đến đầu làng, anh ta gặp hai ông sư và một chú tiểu đang từ chùa đi ra. Chú tiểu hỏi giá lợn, anh ta càu nhàu:</br>
\n<br></br><br>
            – Trọc này là ba trọc (ba lượt) rồi, tôi không nói nữa.</br>
\n<br></br><br>
            Chú tiểu đỏ mặt, đấm anh ta, cho là anh ta nhạo sư. Nhưng anh ta cãi: “Chứ không ba trọc à?” rồi đi thẳng vào làng.</br></string>
    <string name="Phan4">
Truyện kể rằng nhà nọ có ba ông cháu. Hôm nọ, ông sai người cháu đi ra chợ mua giúp ông một đồng mắm và một đồng tương. Thằng bé vâng lời ông mang hai cái bát ra chợ mua. Nhưng đi một lúc, mới sực nhớ ra và quay về nhà để hỏi ông đồng nào mua mắm, đồng nào mua tương. Người ông bảo rằng đồng nào mua cũng được. Thế là thằng bé lại chạy đi ra chợ, một hồi lâu, lại trở về nhà với hai cái bát không trên tay và lại tiếp tục hỏi người ông xem bát nào đựng mắm và bát nào đựng tương.
        \n<br></br><br>
        Người ông nổi giận đánh cho nó mấy roi. Vừa lúc đó bố thằng bé đi đâu về nhà, thấy thằng bé bị ông đánh nên nổi giận rồi nói rằng: </br>
        \n<br></br><br>
        “À! Ông đánh con tôi phải không? Thế thì sợ gì mà tôi không đánh lại con của ông!”</br>
        \n<br></br><br>
        Nói rồi tự đánh vào mình một trận nên thân. Người ông chứng kiến xong lại phát khùng lên quát: </br>
        \n<br></br><br>
        “À! Mày đánh con ông thì…thì ông treo cổ của cha mày lên”. </br>
        \n<br></br><br>
        Nói xong ông vội vàng đi tìm dây thừng để treo cổ.</br>
\n<br></br><br>
        Bài học rút ra: Tam đại con gà là một trong những câu truyện cười dân gian châm biếm được nhiều người tìm đọc nhất. Câu truyện phê phán hành động tức cười của một ông thày đồ “dốt đặc” mà vẫn còn cố tình giấu dốt. Dù có cố gắng giấu như thế nào đi nữa thì càng giấu lại càng lộ cái dốt ra. Cũng thông qua câu truyện này người dân muốn lên án phê phán chê bai một tật xấu của một số người trong xã hội đó chính là không chịu học hỏi trau dồi kiến thức mà lúc nào cũng tự cho ta đây là tài giỏi nhất mặc dù bản thân không biết gì.</br>
</string>
</resources>