<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_App">
        <menu>
            <item android:id="@+id/nav_mybook"
                android:title="@string/nav_MyBook"
                android:icon="@drawable/ic_baseline_menu_book_24"/>

            <item android:id="@+id/nav_note"
                android:title="@string/nav_Note"
                android:icon="@drawable/ic_baseline_notes_24"/>

            <item android:id="@+id/nav_download"
                android:title="@string/nav_Download"
                android:icon="@drawable/ic_baseline_arrow_circle_down_24"/>
        </menu>
    </item>

    <item   android:title="@string/nav_In4">
        <menu>

            <item android:id="@+id/nav_information"
                android:title="@string/nav_ProfileProducer"
                android:icon="@drawable/ic_baseline_person_24"/>

            <item android:id="@+id/nav_information2"
                android:title="@string/nav_ProfileProducer2"
                android:icon="@drawable/ic_baseline_person_24"/>

        </menu>
    </item>
</menu>